2006-05-24  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpcontext.c (gimp_context_tool_list_thaw): the
	default tool is the paintbrush, not rect select.

	* app/tools/gimp-tools.c (gimp_tools_register): attach the default
	visibility state to the tool_info.

	* app/actions/tools-commands.c (tools_reset_cmd_callback): use the
	attached boolean instead of reimplementing the default visibility
	logic.

2006-05-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/raw.c (load_dialog): use a GtkFileChooserButton
	instead of a GimpFileEntry widget. 

	* plug-ins/script-fu/script-fu-interface.c
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-types.h: use GtkFileChooserButton
	for SF_FILENAME and SF_DIRNAME parameters.

2006-05-24  Sven Neumann  <sven@gimp.org>

	* app/dialogs/palette-import-dialog.c: use a GtkFileChooserButton
	instead of a GimpFileEntry widget.

	* data/palettes/Tango.gpl (Name): removed "Palette" from name.

2006-05-24  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppatheditor.[ch]: renamed a parameter, updated
	gtk-doc comment.

2006-05-24  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpfileentry.c: use GTK_STOCK_OPEN instead of
	"..."  to label the "Browse" button. This makes the widget more
	similar to the GtkFileChooserButton and addresses bug #342749.

2006-05-24  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimppdb.c (gimp_pdb_real_register_procedure)
	(gimp_pdb_real_unregister_procedure): use g_hash_table_replace()
	instead of g_hash_table_insert() and make sure the used key is
	always the name of the first procedure in the list.
	Fixes bug #342578.
	
	(It's actually a miracle that only the PDB browser crashed, and
	not GIMP, since we were using pointers to g_free()'d memory as
	keys when different plug-ins registered procedures with the same
	name)

2006-05-23  Sven Neumann  <sven@gimp.org>

	* configure.in: improved output for missing libasound.

2006-05-23  Michael Natterer  <mitch@gimp.org>
